Add user profile and several bug fixes

--- a/public/src/app/games/chat/chat.component.html
+++ b/public/src/app/games/chat/chat.component.html
@@ -1,7 +1,7 @@
 <div id="chat-container">
   <div id="close-btn">
-    <a class="btn-flat waves-effect">
-      <i class="material-icons" (click)="closeMessage()">close</i>
+    <a class="btn-flat waves-effect" (click)="closeMessage()">
+      <i class="material-icons">close</i>
     </a>
   </div>
   <div id="chat-stream">
