--- a/public/src/app/games/lobby.component.html
+++ b/public/src/app/games/lobby.component.html
@@ -1,5 +1,3 @@
-<user-card [hidden]="!profileOpen" (onClose)="toggleProfile()"></user-card>
-
 <div id="top-nav" class="row center">
   <a
     id="play-btn"
@@ -14,7 +12,7 @@
     (click)="exitCreateGame()">
     <i id="back-btn" class="material-icons top-nav-btn">arrow_back</i>
   </a>
-  <img id="avatar" src="http://img2.wikia.nocookie.net/__cb20140120061808/creepypasta/images/e/e2/Anime-Girl-With-Silver-Hair-And-Purple-Eyes-HD-Wallpaper.jpg" (click)="toggleProfile()">
+  <user-card></user-card>
 </div>
 
 <div class="container">
@@ -40,14 +38,21 @@
   </div>
 
   <div class="card" [hidden]="!creatingGame">
-    <div class="card-tabs">
-      <ul class="tabs tabs-fixed-width">
-        <li class="tab"><a class="active" href="#minesweeper-tab">Minesweeper</a></li>
-        <li class="tab"><a href="#shooter-tab">Shooter</a></li>
-      </ul>
-    </div>
     <div class="card-content">
-      <div id="minesweeper-tab">
+      <div class="row">
+        <div class="col s4">
+          Select a game:
+        </div>
+        <div class="col s4">
+          <input name="game-select" type="radio" id="minesweeper" (change)="onSelectionChange('minesweeper')" />
+          <label for="minesweeper">Minesweeper</label>
+        </div>
+        <div class="col s4">
+          <input name="game-select" type="radio" id="shooter" (change)="onSelectionChange('shooter')" />
+          <label for="shooter">Shooter</label>
+        </div>
+      </div>
+      <div id="minesweeper-tab" [hidden]="selection != 'minesweeper'">
         <form #minesweeperForm="ngForm" (ngSubmit)="createMinesweeper()">
           <div class="row">
             <div class="input-field col s12">
@@ -87,7 +92,7 @@
           </div>
         </form>
       </div>
-      <div id="shooter-tab">
+      <div id="shooter-tab" [hidden]="selection != 'shooter'">
         <form #shooterForm="ngForm" (ngSubmit)="createShooter()">
           <div class="row">
             <div class="input-field col s12">
