--- a/public/src/app/users/login.component.css
+++ b/public/src/app/users/login.component.css
@@ -28,3 +28,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
   border-bottom-color: rgb(238, 110, 115) !important;
   box-shadow: 0 1px 0 0 rgb(246, 178, 181) !important;
 }
+
+.card-tabs .tab {
+  cursor: pointer;
+}
