--- a/public/src/app/users/login.component.html
+++ b/public/src/app/users/login.component.html
@@ -9,7 +9,7 @@
         <div materialize class="card-tabs">
           <ul class="tabs tabs-fixed-width">
             <li class="tab">
-              <a class="active" (click)="resetSignUp();inSignIn=false">Sign in</a>
+              <a class="active" (click)="resetSignUp();inSignIn=true">Sign in</a>
             </li>
             <li class="tab"><a class="active" (click)="inSignIn=false">Sign up</a></li>
           </ul>
