Fixed bug where page refreshes when spectate is clicked

--- a/public/src/app/games/lobby.component.html
+++ b/public/src/app/games/lobby.component.html
@@ -34,8 +34,7 @@
         <div class="col s2">
           <a
             [routerLink]="['/games', entry.id]"
-            class="waves-effect waves-light btn-flat spectate-btn"
-            (click)="spectateGame($event)">
+            class="waves-effect waves-light btn-flat spectate-btn">
             <i class="material-icons">remove_red_eye</i>
           </a>
         </div>
