--- a/public/src/app/users/user-card.component.css
+++ b/public/src/app/users/user-card.component.css
@@ -60,3 +60,8 @@ form {
   margin-right: 20px;
   cursor: pointer;
 }
+
+.file-path-wrapper {
+  display: table-caption;
+  transform: translateY(-1000px);
+}
