--- a/public/src/app/games/lobby.component.html
+++ b/public/src/app/games/lobby.component.html
@@ -22,7 +22,7 @@
       <div class="row">
         <div class="col s1"></div>
         <div class="col s1">
-          <img class="avatar" src="api/users/{{entry.id}}/avatar">
+          <img class="avatar" src="api/users/{{entry.host}}/avatar">
         </div>
         <div class="col s8">
           {{entry.username}}
