fixed shooter board

--- a/public/src/app/games/shooter/shooter-game.component.css
+++ b/public/src/app/games/shooter/shooter-game.component.css
@@ -1,3 +1,5 @@
 canvas {
-  background-color: #000;
+  background-size: auto;
+  font-size: 20px;
+  background-image: url('https://www.desktopbackground.org/p/2011/06/18/220899_simple-space-hd-wallpapers_2560x1600_h.png')
 }
