--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -10,6 +10,13 @@ html, body, app {
   background-color: transparent !important;
   /* RGBa with 0.6 opacity */
   background-color: rgba(0, 0, 0, 0.3) !important;
+  margin-top: 50px;
+  user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 #app-container {
