--- a/public/src/app/games/lobby.component.html
+++ b/public/src/app/games/lobby.component.html
@@ -26,8 +26,8 @@
         </div>
         <div class="col s8">
           {{entry.username}}
-          <br>
-          <div class="create-time">Last active: {{entry.updatedAt}}</div>
+          <div class="info">Playing {{getGame(entry.type)}}</div>
+          <div class="info">Last active: {{entry.updatedAt}}</div>
         </div>
         <div class="col s2">
           <a
