--- a/public/src/app/users/login.component.html
+++ b/public/src/app/users/login.component.html
@@ -6,8 +6,8 @@
         <div class="card-content">
           <h4>WebSweeper</h4>
         </div>
-        <div materialize class="card-tabs">
-          <ul class="tabs tabs-fixed-width">
+        <div class="card-tabs">
+          <ul materialize="tabs" class="tabs tabs-fixed-width">
             <li class="tab">
               <a class="active" (click)="resetSignUp()">Sign in</a>
             </li>
