removed unnessary attributes

--- a/public/src/app/common/credits.component.html
+++ b/public/src/app/common/credits.component.html
@@ -8,7 +8,7 @@
         <div class="card-content">
           <h3>Credits</h3>
           <div class="divider"></div>
-          <div materialize class="card-tabs">
+          <div class="card-tabs">
             <ul materialize="tabs" class="tabs tabs-fixed-width">
               <li class="tab" *ngFor="let topic of credits; let i = index;">
                 <a class="active" (click)="curr=i">{{topic.name}}</a>
