--- a/public/src/app/games/chat/message.component.css
+++ b/public/src/app/games/chat/message.component.css
@@ -18,8 +18,10 @@
   padding-left: 10px;
   font-size: 16px;
   display:block;
+  cursor: pointer;
 }
 .username {
   display: inline-block;
   font-weight: bold;
+  cursor: pointer;
 }
