Added validation on avatar upload

--- a/public/src/app/users/user-card.component.html
+++ b/public/src/app/users/user-card.component.html
@@ -11,7 +11,7 @@
         <div class="file-field input-field">
           <div class="btn">
             <span>Change avatar</span>
-            <input #avatarUpload id="avatar-upload" type="file" (change)="uploadAvatar()">
+            <input #avatarUpload id="avatar-upload" type="file" (change)="uploadAvatar()"  accept="image/*">
           </div>
           <div class="file-path-wrapper">
             <input class="file-path validate" type="text">
