Fix chat box animation

--- a/public/src/app/games/chat/chat.component.html
+++ b/public/src/app/games/chat/chat.component.html
@@ -1,4 +1,4 @@
-<div id="chat-container">
+<div id="chat-container" class="animated fadeInRight">
   <div id="close-btn">
     <a class="btn-flat waves-effect" (click)="closeMessage()">
       <i class="material-icons">close</i>
